# MGTAB-bot

./: .dockerignore  .gitignore  Cresci15-GNN.py  Cresci15-ML.py  Dataset.py  Dockerfile  HGT.py  MGTAB-GNN.py  MGTAB-ML.py  RGT.py  SHGN.py  USAGE.md  api.py  build_dataset.py  docker-compose.yml  donwload.py  download.py  download_models.sh  plan.md  predict.py  preprocess.py  pyproject.toml  test.py  train_adaboost.py
docker/: entrypoint.sh
test_samples/: bot_example.json  human_example.json  zh_example.json
utils/: config.py  device.py  embedding.py  inference.py  jsonl.py
