[project]
name = "mgtab"
version = "0.1.0"
description = "MGTAB: A Multi-Relational Graph-Based Twitter Account Detection Benchmark"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.6.0",
    "pytorch-lightning>=2.0",
    "scikit-learn",
    "xgboost",
    "numpy",
    "transformers>=4.51,<5",
    "accelerate>=0.26",
    "huggingface-hub>=0.23",
    "sentencepiece",
    "joblib",
    "fastapi",
    "uvicorn[standard]",
    "tqdm",
]
