[project]
name = "mgtab"
version = "0.1.0"
description = "Bot detection with Qwen3 embeddings + AdaBoost"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch>=2.7.0",
    "scikit-learn",
    "numpy",
    "transformers>=4.51,<5",
    "accelerate>=0.26",
    "huggingface-hub>=0.23",
    "sentencepiece",
    "joblib",
    "fastapi",
    "uvicorn[standard]",
    "tqdm",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
